# soundcloud-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
.github/workflows/: rust-ci.yml
src/: app.rs  config.rs  lib.rs  main.rs  playback.rs  util.rs
src/auth/: mod.rs
src/events/: mod.rs
src/handlers/: mod.rs
src/soundcloud/: api.rs  auth.rs  client.rs  config.rs  mod.rs  models.rs  util.rs
src/soundcloud/auth/: mod.rs  pkce.rs  redirect.rs
src/static/: error.html  redirect.html
src/ui/: constants.rs  help.rs  mod.rs
