[package]
name = "soundcloud-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
crossterm = "0.29.0"
dirs = "6.0.0"
open = "5.3.2"
rand = "0.9.1"
ratatui = "0.29.0"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
ring = "0.17.14"
rodio = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.15"
